client/css/base.css
* {
    font-family: 'PT Serif', serif;
}

.jpress-post-title {
    border-top-color: #b1b1b1;
    border-top-style: solid;
    border-top-width: 1px;
    box-sizing: border-box;
    color: #000;
    display: block;
    font-size: 28px;
    text-rendering: auto;
    text-size-adjust: 100%;
    word-spacing: 0;
    -webkit-margin-after: 8.58px;
    -webkit-margin-before: 8.58px;
    -webkit-margin-end: 0;
    -webkit-margin-start: 0;
    margin: 8.58px 0;
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 30px;
}

#jpress-main-title {
    background-color: #bcbcbc;
    font-size: 30px;
}

.jpress-post-body {
    padding: 10px;
}

.jpress-flatbutton {
    padding: 10px;
    cursor: pointer;
}
.jpress-flatbutton:hover {
    background-color: lightgray;
}


.jgrid-sidebar {
    background-color: #e9e9e9;
    width: 20vw;
}

